namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name:  netology
  labels:
    tier: homework
...
