deployment-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-backend
  labels:
    task: one
    tier: homework
  annotations:
    container: multitool
  namespace: netology
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      type: backend 
  template:
    metadata:
      labels:
        app: multitool
        type: backend
    spec:
      containers:
        - name: multitool
          image: praqma/network-multitool:alpine-extra
          resources:
            limits:
              memory: "128Mi"
              cpu: "450m"
            requests:
              memory: "32Mi"
              cpu: "150m"
          ports:
            - name: http-multitool
              containerPort: 8080
              protocol: TCP
            - name: https-multitool
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 2
...
