deployment-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-frontend
  labels:
    task: one
    tier: homework
  annotations:
    container: nginx
  namespace: netology
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      type: frontend 
  template:
    metadata:
      labels:
        app: nginx
        type: frontend 
    spec:
      containers:
        - name: nginx
          image: nginx:1.24.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          volumeMounts:
            - name:  nginx-index
              mountPath: "/usr/share/nginx/html"
          ports:
            - name: http-nginx
              containerPort: 80
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 4
      volumes:
        - name:  nginx-index
          emptyDir: {}
...
