service-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
  namespace: netology
spec:
  selector:
    app: multitool
    type: backend
  type: ClusterIP
  ports:
    - name: multitool
      port: 80
      targetPort: http-multitool
...
