service-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: netology
spec:
  selector:
    app: nginx
    type: frontend 
  type: ClusterIP
  ports:
    - name: nginx
      port: 80
      targetPort: http-nginx
...
