ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hv
  labels:
    name: ingress-microk8s
  namespace: netology
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: kuber.dim.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-frontend
                port:
                  name: nginx
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-backend
                port:
                  name: multitool
...
